--- a/utilisateurs-service/src/main/resources/application.properties
+++ b/utilisateurs-service/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.cloud.consul.discovery.hostname=localhost
 spring.cloud.consul.discovery.register-health-check=false
 
 # config
-spring.cloud.config.uri=http://localhost:8888
+# spring.cloud.config.uri=http://localhost:8888
