--- a/utilisateurs-service/src/main/resources/application.properties
+++ b/utilisateurs-service/src/main/resources/application.properties
@@ -27,5 +27,5 @@ spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.hostname=localhost
 spring.cloud.consul.discovery.register-health-check=false
 
-# config
-# spring.cloud.config.uri=http://localhost:8888
+config
+spring.cloud.config.uri=http://localhost:8888
