--- a/cours-service/src/main/resources/application.properties
+++ b/cours-service/src/main/resources/application.properties
@@ -1,28 +1,25 @@
 spring.application.name=cours-service
 server.port=8080
 
-# actuator
-management.security.enabled=false
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=ALWAYS
-security.basic.enabled=false
-
-# admin
-spring.boot.admin.client.url=http://localhost:8762
-
-# pg
-spring.h2.console.enabled=false
-spring.jpa.show-sql=false
-spring.jpa.database=postgresql
+# h2
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=riovas
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.initialization-mode=always
+
+# actuator
+management.endpoints.beans.enabled=false
+management.endpoints.web.exposure.include=*
 
 # consul
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.hostname=localhost
 spring.cloud.consul.discovery.register-health-check=false
+
+# bindings stream
+spring.cloud.stream.bindings.input.destination = cours
+spring.cloud.stream.bindings.input.group = cours-group
+spring.cloud.stream.bindings.input.durableSubscription = true
+
+# zipkin
+# spring.zipkin.baseUrl=http://localhost:9411/
+# spring.sleuth.sampler.probability=1.0
+# spring.zipkin.sender.type=web
