--- a/cours-service/src/main/resources/application.properties
+++ b/cours-service/src/main/resources/application.properties
@@ -2,7 +2,14 @@ spring.application.name=cours-service
 server.port=8080
 
 # h2
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:h2:mem:m2db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:file:./database;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+spring.datasource.initialization-mode=always
 
 # actuator
 management.endpoints.beans.enabled=false
