--- a/cours-service/src/main/resources/application.properties
+++ b/cours-service/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=cours-service
 server.port=8080
 
 # h2
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.url=jdbc:h2:mem:m2db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.url=jdbc:h2:file:./db/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
